# deenis

./: Cargo.toml  README.md  flake.nix
.vim/: coc-settings.json
tracing-first/: Cargo.toml
tracing-first-common/: Cargo.toml
tracing-first-common/src/: lib.rs
tracing-first-ebpf/: Cargo.toml  build.rs
tracing-first-ebpf/src/: generated.rs  lib.rs  main.rs
tracing-first/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
