[package]
name = "tracing-first-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }

tracing-first-common = { path = "../tracing-first-common" }

[[bin]]
name = "tracing-first"
path = "src/main.rs"

[lib]
name = "tracing_first_ebpf"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []


[build-dependencies]
bindgen = "0.69.1"
